--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,63 @@
+@article{Journal,
+    author = {Andrew Fluck and Mary Webb and Margaret Cox and Charoula Angeli and Joyce Malyn-Smith and Joke Voogt and Jason Zagami},
+    title = {Arguing for Computer Science in the School Curriculum},
+    journal = {Educational Technology & Society},
+    volume = {19},
+    number = {3},
+    year = {2016}
+}
+
+@inproceedings{Conference,
+    author = {John Paul Quilingking Tomas and Daniel Oliver Ancheta and Carl Andrei Aquino and Aerol Ortiz},
+    title = {Determining Student's Engagement in Synchronous Online Classes Using Deep Learning (Compute Vision) and Machine Learning},
+    booktitle = {Proceedings of the 2022 5th International Conference on Machine Learning and Machine Intelligence},
+    year = {2023},
+    url = {https://doi.org/10.1145/3568199.3568200}
+}
+
+@phdthesis{PhD,
+    author = {Indra Kumar},
+    title = {Explainability, fairness, and evaluation in machine learning: From theory to policy and back},
+    school = {Brown University},
+    year = {2024}
+}
+
+@article{Magazine,
+    author = {Steve Nadis},
+    title = {Undergraduate Upends a 40-Year-Old Data Science Conjecture},
+    journal = {Quanta Magazine},
+    year = {2025}
+}
+
+@book{Book,
+    author = {Thomas Haigh and Paul E. Ceruzzi},
+    title = {A new history of modern computing},
+    publisher = {The MIT Press},
+    year = {2021}
+}
+
+@inbook{Chapter,
+    author = {Charles Petzold},
+    title = {Code: The Hidden Language of Computer
+    Hardware and Software},
+    publisher = {Microsoft Press},
+    year = {2000},
+    chapter = {Chapter 1. Best Friends}
+}
+
+@misc{Video,
+    author = {WackyScience},
+    title = {COMPUTER SCIENCE explained in 17 Minutes},
+    year = {2024},
+    url = {https://www.youtube.com/watch?v=CxGSnA-RTsA},
+    note = {Accessed: February 2025}
+}
+
+@manual{Documentation,
+    title = {Installing Python Modules},
+    organization = {Python Software Foundation},
+    url = {https://docs.python.org/3.13/installing/index.html}
+}
 
 @misc {OverleafBibliographyManagement,
    url = {https://www.overleaf.com/learn/latex/Bibliography_management_with_bibtex},
