--- a/document.tex
+++ b/document.tex
@@ -142,21 +142,21 @@ This worksheet is due March 1, 2025 at midnight, to be submitted as a GitHub rep
             \item \texttt{git init}
             \item \texttt{touch file.py}
             \item \texttt{vim file.py}
-            \item \includegraphics[width=0.5\linewidth]{Images/Screenshot 2025-03-01 at 2.51.18 PM.png}
+            \item \includegraphics[width=0.5\linewidth]{Images/1.png}
             \item \texttt{git add file.py}
             \item \texttt{git commit -m A}
             \item \texttt{git branch -b new\_branch}
             \item \texttt{vim file.py}
-            \item \includegraphics[width=0.5\linewidth]{Images/Screenshot 2025-03-01 at 2.53.39 PM.png}
+            \item \includegraphics[width=0.5\linewidth]{Images/2.png}
             \item \texttt{git add file.py}
             \item \texttt{git commit -m "Print hello"}
             \item \texttt{git checkout main}
             \item \texttt{vim file.py}
-            \item \includegraphics[width=0.5\linewidth]{Images/Screenshot 2025-03-01 at 2.55.51 PM.png}
+            \item \includegraphics[width=0.5\linewidth]{Images/3.png}
             \item \texttt{git add file.py}
             \item \texttt{git commit -m "Print hey"}
             \item \texttt{git merge new\_branch}
-            \item \includegraphics[width=0.5\linewidth]{Images/Screenshot 2025-03-01 at 2.57.26 PM.png}
+            \item \includegraphics[width=0.5\linewidth]{Images/4.png}
         \end{itemize}
 \end{enumerate}
 
